--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between; /* Botões ficam "embaixo", título/tabela em cima */
-      align-items: flex-start;        /* Remove a centralização vertical */
+      align-items: center;        /* Remove a centralização vertical */
     }
 
     /* Centraliza a tabela horizontalmente dentro do container de resumo */
