--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       display: flex;
       flex-direction: column;
-      justify-content: space-between; /* Botões ficam "embaixo", título/tabela em cima */
+      justify-content: flex-start; /* Botões ficam "embaixo", título/tabela em cima */
       align-items: center;        /* Remove a centralização vertical */
     }
 
