--- a/index.html
+++ b/index.html
@@ -155,15 +155,12 @@
       justify-content: flex-start; /* Botões ficam "embaixo", título/tabela em cima */
       align-items: center;        /* Remove a centralização vertical */
     }
-    .btn-container {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 20px 0;
+   .btn-container {
+  margin-top: auto; /* Faz os botões irem pro final da div */
   display: flex;
   justify-content: center;
   gap: 10px;
+  padding-top: 20px;
 }
 
     /* Centraliza a tabela horizontalmente dentro do container de resumo */
