--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
       flex-direction: column;
       justify-content: flex-start; /* Botões ficam "embaixo", título/tabela em cima */
       align-items: center;        /* Remove a centralização vertical */
+position: relative;
+  padding-bottom: 80px; /* espaço pros botões */
     }
    .btn-container {
   margin-top: auto; /* Faz os botões irem pro final da div */
