--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   <header class="main-header">
     <div class="header-content">
       <h1>PERFECTA</h1>
-      <img src="logo.png" alt="Logo Perfecta" class="logo">
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.instagram.com%2Fperfectaesquadrias%2F&psig=AOvVaw0-RmZkVBLkKHY--C6CBxmr&ust=1744903799834000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLCz_qrv3IwDFQAAAAAdAAAAABAE" alt="Logo Perfecta" class="logo">
     </div>
   </header>
 
