--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   <!-- Cabeçalho Minimalista -->
   <header class="main-header">
     <div class="header-content">
-      <h1>PERFECTA</h1>
+      <h1>PERFECTA - TRATAMENTO PLANILHA DE ITENS</h1>
       <img src="LOGO.png" alt="Logo Perfecta" class="logo">
     </div>
   </header>
