--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<link rel="icon" type="image/png" href="LOGO.png">
 <head>
   <meta charset="UTF-8">
   <title>TRATAMENTO PLANILHA ITENS</title>
