--- a/index.html
+++ b/index.html
@@ -181,9 +181,11 @@
       padding-top: 20px;
     }
     .resumo-table-container {
-      width: 100%;
-      text-align: center;
-      margin: 0 auto;
+      margin-top: auto;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      padding-top: 20px;
     }
     .resumo-table-container table {
       margin: 0 auto;
