--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <!-- Fonte Roboto -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
   <style>
+    #resultTable {
+  margin: 0 auto;
+  display: table;
+}
+
     /* Reset Básico */
     * {
       box-sizing: border-box;
@@ -181,7 +186,7 @@
       padding-top: 20px;
     }
     .resumo-table-container {
-      margin-top: auto;
+     margin-top: auto;
       display: flex;
       justify-content: center;
       gap: 10px;
@@ -639,7 +644,7 @@
         alert("Informe o novo texto (cor) para atualização.");
         return;
       }
-      const tbody = document.querySelector("#resultTable tbody");
+      const tbody = document.querySelector(" tbody");
       for (let i = 0; i < tbody.rows.length; i++) {
         let cell = tbody.rows[i].cells[4]; // Coluna COR (índice 4)
         cell.textContent = newColorText;
