--- a/index.html
+++ b/index.html
@@ -165,26 +165,28 @@
       justify-content: center;
       flex-wrap: wrap;
     }
-    .resumo-box {
-      flex: 1 1 400px;
-      max-width: 600px;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      position: relative;
-      padding-bottom: 80px;
-    }
-    .btn-container {
-      margin-top: auto;
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      padding-top: 20px;
-    }
+   .resumo-box {
+  flex: 1 1 400px;
+  max-width: 600px;
+  background: #fff;
+  padding: 20px;           /* Mantém apenas esse padding */
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  /* Remova ou comente as linhas abaixo, caso existam:
+     position: relative;
+     padding-bottom: 80px;
+  */
+}
+
+.btn-container {
+  margin-top: auto;        /* Joga os botões para a parte de baixo do card */
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-top: 20px;
+}
     .resumo-table-container {
      margin-top: auto;
       display: flex;
