--- a/index.html
+++ b/index.html
@@ -187,12 +187,11 @@
   gap: 10px;
   padding-top: 20px;
 }
-    .resumo-table-container {
-     margin-top: auto;
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      padding-top: 20px;
+    .resumo-table-container {.resumo-table-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
     }
     .resumo-table-container table {
       margin: 0 auto;
