--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <!-- Fonte Roboto -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
   <style>
+    .resumo-container {
+  display: flex;
+  justify-content: center;
+  padding: 40px 20px;
+}
     #resultTable {
   margin: 0 auto;
   display: table;
