--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
       flex-wrap: wrap;
     }
    .resumo-box {
-  flex: 1 1 400px;
+   width: auto;
+  min-width: 300px;
   max-width: 600px;
   background: #fff;
   padding: 20px;           /* Mantém apenas esse padding */
