--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
       flex-wrap: wrap;
     }
    .resumo-box {
-   width: auto;
-  min-width: 300px;
+  flex: 1 1 400px;
   max-width: 600px;
   background: #fff;
   padding: 20px;           /* Mantém apenas esse padding */
